# SkinCancerImageClassificationResearch

./: .gitignore  README.md  pyproject.toml
DataCleaning/: Cleaning.ipynb  Preprocessing.ipynb  instances.csv
Main&ModelTesting/: DINOv2BaseHeadOnly.ipynb  DINOv2BaseLast3Blocks.ipynb  DINOv2LinearProbe_KFold.ipynb  DINOv2SmallHeadOnly.ipynb  DINOv2SmallLastBlock.ipynb  DINOv2TrueZeroShotBaseline.ipynb  DINOv2ZeroShotBaseline.ipynb  DinoV2Dscope.ipynb  EDA.ipynb  Resnet.ipynb  ResnetModel.ipynb  SwinTransformerV2.ipynb  SwinV2BaseFullFineTune.ipynb  SwinV2TinyFullFineTune.ipynb  SwinV2_LinearProbe_KFold.ipynb  Training.ipynb  ViTBaseFullFineTune.ipynb  ViTSmallFullFineTune.ipynb  ViT_LinearProbe_KFold.ipynb  YoloTesting.ipynb  utils.py
Main&ModelTesting/runs/classify/skin_cancer_project/run_medium_4482/: args.yaml  results.csv
